Fix scroll issue with hidden overflow

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 	--serif: 'Roboto Slab', serif;
 	--sans: 'Poppins', sans-serif;
 	background-color: var(--darkgray);
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 header, footer {
